# numberTranslator

./: LICENSE  README.md
numberTranslator/: .cproject  .project  CMakeLists.txt
numberTranslator/include/Core/: AuxiliarOperations.hpp  BillionTranslationCommand.hpp  GuidonDecimalTranslationCommand.hpp  ISentenceTranslationCommand.hpp  MillionTranslationCommand.hpp  NonComposables.hpp  NumberCompositionHandler.hpp  SentenceTranslationDataModel.hpp  SentenceTranslator.hpp  TeensTranslationCommand.hpp  ThowsandTranslationCommand.hpp  TranslationOperations.hpp  Translator.hpp  UnitTranslationCommand.hpp
numberTranslator/include/Core/Commands/: ASentenceTranslationCommand.hpp  BillionTranslationCommand.hpp  DecimalTranslationCommand.hpp  DefaultTranslationCommand.hpp  GuidonDecimalTranslationCommand.hpp  HundredTranslationCommand.hpp  MillionTranslationCommand.hpp  TeensTranslationCommand.hpp  ThowsandTranslationCommand.hpp  UnitTranslationCommand.hpp
numberTranslator/include/Core/Utilities/: AuxiliarOperations.hpp  TranslationOperations.hpp
numberTranslator/include/OutputInterfaces/: ConsoleOutputObserver.hpp  DisplayerSubject.hpp  FileOutputObserver.hpp  IObserver.hpp  ISubject.hpp
numberTranslator/src/: CMakeLists.txt  numberTranslator.cpp
numberTranslator/src/Core/: ASentenceTranslationCommand.cpp  AuxiliarOperations.cpp  BillionTranslationCommand.cpp  CMakeLists.txt  DecimalTranslationCommand.cpp  DefaultTranslationCommand.cpp  GuidonDecimalTranslationCommand.cpp  HundredTranslationCommand.cpp  MillionTranslationCommand.cpp  NonComposables.cpp  NumberCompositionHandler.cpp  SentenceTranslator.cpp  TeensTranslationCommand.cpp  ThowsandTranslationCommand.cpp  TranslationOperations.cpp  Translator.cpp  UnitTranslationCommand.cpp
numberTranslator/src/Core/Commands/: ASentenceTranslationCommand.cpp  BillionTranslationCommand.cpp  CMakeLists.txt  DecimalTranslationCommand.cpp  DefaultTranslationCommand.cpp  GuidonDecimalTranslationCommand.cpp  HundredTranslationCommand.cpp  MillionTranslationCommand.cpp  TeensTranslationCommand.cpp  (+2 more)
numberTranslator/src/OutputInterfaces/: CMakeLists.txt  ConsoleOutputObserver.cpp  DisplayerSubject.cpp  FileOutputObserver.cpp
numberTranslator/tst/: CMakeLists.txt  numberTranslatorTest.cpp
numberTranslator/tst/AuxiliarFiles/: test_line_by_line.txt
numberTranslator/tst/Core/: AuxiliarOperationsTest.cpp  NonComposablesTest.cpp  NumberCompositionHandlerTest.cpp  SentenceTranslatorTest.cpp  TranslationOperationsTest.cpp  test_line_by_line.txt
(+5 files in other folders)
